# pixmaps
install_data([
  'grisbi.svg',
  'gsb-ac-asset-32.png',
  'gsb-ac-bank-16.png',
  'gsb-ac-bank-32.png',
  'gsb-ac-cash-32.png',
  'gsb-ac-home-32.png',
  'gsb-ac-liability-16.png',
  'gsb-ac-liability-24.png',
  'gsb-ac-liability-32.png',
  'gsb-addresses-32.png',
  'gsb-amount-32.png',
  'gsb-archive-16.png',
  'gsb-archive-24.png',
  'gsb-archive-32.png',
  'gsb-arrow-down-16.png',
  'gsb-balance_estimate-32.png',
  'gsb-banks-32.png',
  'gsb-budgetary_lines-32.png',
  'gsb-bug-16.png',
  'gsb-bug-32.png',
  'gsb-categories-32.png',
  'gsb-comments-16.png',
  'gsb-comments-24.png',
  'gsb-convert-16.png',
  'gsb-convert-24.png',
  'gsb-currencies-32.png',
  'gsb-display-gui-32.png',
  'gsb-export-16.png',
  'gsb-export-24.png',
  'gsb-export-32.png',
  'gsb-export-archive-16.png',
  'gsb-export-archive-32.png',
  'gsb-files-32.png',
  'gsb-financial-years-32.png',
  'gsb-fonts-32.png',
  'gsb-form-32.png',
  'gsb-generalities-32.png',
  'gsb-graph-histo-24.png',
  'gsb-graph-line-24.png',
  'gsb-graph-sectors-24.png',
  'gsb-grille-16.png',
  'gsb-help-16.png',
  'gsb-import-16.png',
  'gsb-import-32.png',
  'gsb-jump-16.png',
  'gsb-new-categ-16.png',
  'gsb-new-categ-24.png',
  'gsb-new-file-16.png',
  'gsb-new-file-24.png',
  'gsb-new-file-32.png',
  'gsb-new-ib-16.png',
  'gsb-new-ib-24.png',
  'gsb-new-payee-16.png',
  'gsb-new-payee-24.png',
  'gsb-new-report-16.png',
  'gsb-new-report-24.png',
  'gsb-new-scheduled-24.png',
  'gsb-new-sub-categ-24.png',
  'gsb-new-sub-ib-24.png',
  'gsb-new-transaction-16.png',
  'gsb-new-transaction-24.png',
  'gsb-organization-32.png',
  'gsb-payees-32.png',
  'gsb-payees-manage-16.png',
  'gsb-payees-manage-24.png',
  'gsb-payment-32.png',
  'gsb-pdf-24.png',
  'gsb-preferences-16.png',
  'gsb-reconat-32.png',
  'gsb-reconciliation-24.png',
  'gsb-reconciliation-32.png',
  'gsb-reports-32.png',
  'gsb-scheduler-32.png',
  'gsb-text-32.png',
  'gsb-title-32.png',
  'gsb-toolbar-32.png',
  'gsb-transaction-list-32.png',
  'gsb-transdisplay-32.png',
  'gsb-transfer-32.png',
  'gsb-warnings-32.png',
  'gsb-web-browser-16.png',
  'gtk-about-16.png',
  'gtk-close-16.png',
  'gtk-copy-16.png',
  'gtk-copy-24.png',
  'gtk-corbeille-32.png',
  'gtk-delete-16.png',
  'gtk-delete-24.png',
  'gtk-dialog-warning.png',
  'gtk-edit-16.png',
  'gtk-edit-24.png',
  'gtk-execute-16.png',
  'gtk-execute-24.png',
  'gtk-open-16.png',
  'gtk-open-24.png',
  'gtk-print-16.png',
  'gtk-print-24.png',
  'gtk-properties-16.png',
  'gtk-properties-24.png',
  'gtk-quit-16.png',
  'gtk-refresh-16.png',
  'gtk-remove-16.png',
  'gtk-save-16.png',
  'gtk-save-as-16.png',
  'gtk-select-color-24.png',
  'gtk-window-new-16.png',
  ],
  install_dir : pixmaps_dir)

# flags
install_data([
  'flags/ADP.png',
  'flags/AED.png',
  'flags/AFN.png',
  'flags/ALL.png',
  'flags/AMD.png',
  'flags/ANG.png',
  'flags/ARS.png',
  'flags/ATS.png',
  'flags/AUD.png',
  'flags/AWG.png',
  'flags/AZM.png',
  'flags/BAM.png',
  'flags/BBD.png',
  'flags/BDT.png',
  'flags/BEF.png',
  'flags/BGN.png',
  'flags/BHD.png',
  'flags/BHU.png',
  'flags/BIF.png',
  'flags/BMD.png',
  'flags/BND.png',
  'flags/BOB.png',
  'flags/BRL.png',
  'flags/BSD.png',
  'flags/BTN.png',
  'flags/BWP.png',
  'flags/BYB.png',
  'flags/BZD.png',
  'flags/CAD.png',
  'flags/CAM.png',
  'flags/CDF.png',
  'flags/CHA.png',
  'flags/CHF.png',
  'flags/CLP.png',
  'flags/CNY.png',
  'flags/COO.png',
  'flags/COP.png',
  'flags/CO_.png',
  'flags/CRC.png',
  'flags/CUP.png',
  'flags/CVE.png',
  'flags/CYP.png',
  'flags/CZK.png',
  'flags/DEM.png',
  'flags/DJF.png',
  'flags/DKK.png',
  'flags/DOP.png',
  'flags/DZD.png',
  'flags/ECS.png',
  'flags/EEK.png',
  'flags/EGP.png',
  'flags/ERN.png',
  'flags/ESP.png',
  'flags/ETB.png',
  'flags/EUR.png',
  'flags/FIM.png',
  'flags/FJD.png',
  'flags/FKP.png',
  'flags/FRF.png',
  'flags/GBP.png',
  'flags/GEL.png',
  'flags/GHC.png',
  'flags/GIP.png',
  'flags/GMD.png',
  'flags/GNF.png',
  'flags/GRD.png',
  'flags/GRE.png',
  'flags/GTQ.png',
  'flags/GWP.png',
  'flags/GYD.png',
  'flags/HKD.png',
  'flags/HNL.png',
  'flags/HRK.png',
  'flags/HTG.png',
  'flags/HUF.png',
  'flags/IDR.png',
  'flags/IEP.png',
  'flags/ILS.png',
  'flags/INR.png',
  'flags/IQD.png',
  'flags/IRR.png',
  'flags/ISK.png',
  'flags/ITL.png',
  'flags/JMD.png',
  'flags/JOD.png',
  'flags/JPY.png',
  'flags/KES.png',
  'flags/KGS.png',
  'flags/KHR.png',
  'flags/KIR.png',
  'flags/KMF.png',
  'flags/KPW.png',
  'flags/KRW.png',
  'flags/KWD.png',
  'flags/KYD.png',
  'flags/KZT.png',
  'flags/LAK.png',
  'flags/LBP.png',
  'flags/LIE.png',
  'flags/LKR.png',
  'flags/LRD.png',
  'flags/LSL.png',
  'flags/LTL.png',
  'flags/LUF.png',
  'flags/LVL.png',
  'flags/LYD.png',
  'flags/MAD.png',
  'flags/MDL.png',
  'flags/MGF.png',
  'flags/MKD.png',
  'flags/MMK.png',
  'flags/MNT.png',
  'flags/MOP.png',
  'flags/MRO.png',
  'flags/MTL.png',
  'flags/MUR.png',
  'flags/MVR.png',
  'flags/MWK.png',
  'flags/MXP.png',
  'flags/MYR.png',
  'flags/MZM.png',
  'flags/NAD.png',
  'flags/NAU.png',
  'flags/NGN.png',
  'flags/NIG.png',
  'flags/NIO.png',
  'flags/NLG.png',
  'flags/NOK.png',
  'flags/NPR.png',
  'flags/NZD.png',
  'flags/OMR.png',
  'flags/PAB.png',
  'flags/PEN.png',
  'flags/PGK.png',
  'flags/PHP.png',
  'flags/PKR.png',
  'flags/PLN.png',
  'flags/PTE.png',
  'flags/PYG.png',
  'flags/QAR.png',
  'flags/ROL.png',
  'flags/RUR.png',
  'flags/RWF.png',
  'flags/SAN.png',
  'flags/SAR.png',
  'flags/SBD.png',
  'flags/SCR.png',
  'flags/SDD.png',
  'flags/SEK.png',
  'flags/SEN.png',
  'flags/SGD.png',
  'flags/SHP.png',
  'flags/SIT.png',
  'flags/SKK.png',
  'flags/SLC.png',
  'flags/SLL.png',
  'flags/SOS.png',
  'flags/SRD.png',
  'flags/STD.png',
  'flags/SVC.png',
  'flags/SYP.png',
  'flags/SZL.png',
  'flags/THB.png',
  'flags/TJS.png',
  'flags/TMM.png',
  'flags/TND.png',
  'flags/TOG.png',
  'flags/TOP.png',
  'flags/TPE.png',
  'flags/TRL.png',
  'flags/TTD.png',
  'flags/TUV.png',
  'flags/TWD.png',
  'flags/TZS.png',
  'flags/UAH.png',
  'flags/UGX.png',
  'flags/USD.png',
  'flags/UYU.png',
  'flags/UZS.png',
  'flags/VAT.png',
  'flags/VEB.png',
  'flags/VND.png',
  'flags/VUV.png',
  'flags/WST.png',
  'flags/XBT.png',
  'flags/XPF.png',
  'flags/YER.png',
  'flags/YUM.png',
  'flags/YUV.png',
  'flags/ZAR.png',
  'flags/ZMK.png',
  'flags/ZWD.png',
  ],
  install_dir : join_paths(pixmaps_dir, 'flags'))

install_data(
  [
    'application-x-grisbi.svg',
  ],
  install_dir : 'share/icons/hicolor/scalable/mimetypes'
  )

install_data(
  [
    'grisbi.svg',
  ],
  install_dir : 'share/icons/hicolor/scalable/apps'
  )

